<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_dialog_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/Select_Date_Range"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:text="@string/From"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tvFromDate"
            android:background="@drawable/date_field_background"
            android:padding="10dp"
            android:text="@string/Start_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/To"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tvToDate"
            android:background="@drawable/date_field_background"
            android:padding="10dp"
            android:text="@string/End_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="78dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_gradient"
            android:fontFamily="@font/inter_semibold"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:stateListAnimator="@null"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:backgroundTint="@null"
            app:cornerRadius="22dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            android:layout_width="78dp"
            android:layout_height="42dp"
            android:background="@drawable/btn_gradient"
            android:fontFamily="@font/inter_semibold"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:stateListAnimator="@null"
            android:text="@string/Ok"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:cornerRadius="10dp" />
    </LinearLayout>
</LinearLayout>
