<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp"
        android:text="@string/confirm_Delete"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_gradient_red"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:stateListAnimator="@null"
            android:text="@string/logout_no"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:backgroundTint="@null"
            app:cornerRadius="22dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_gradient"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="6dp"
            android:paddingHorizontal="12dp"
            android:stateListAnimator="@null"
            android:text="@string/logout_yes"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:backgroundTint="@null"
            app:cornerRadius="10dp" />
    </LinearLayout>
</LinearLayout>
